@@ -249,6 +249,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12283) Special:Newpages forgets parameters
 * (bug 12031) All namespaces doesn't work in Special:Newpages
 * (bug 585) Only create searchindex replica table for parser tests if db is MySQL
+* Allow --record option if parserTests.php to work when using Postgres
 
 == Parser changes in 1.12 ==
 
